<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NAS-Backup</string>

    <string name="action_settings">Settings</string>
    <string name="action_upload">Start Backup</string>

    <string name="title_synclist">Synchronisationsordner</string>

    <string name="msg_no_server_specified">Es wurden noch keine Synchronisationsordner festgelegt.</string>
    <string name="msg_no_internet_connection">Keine Internetverbindung.</string>
    <string name="msg_address_not_valid">Die Serveradresse ich nicht gültig.</string>
    <string name="msg_server_no_cifs">Der angegebene Server ist kein CIFS Server.</string>
    <string name="msg_could_not_save">Konnte die Daten nicht speichern.</string>

    <string name="dlg_add_sync">Anlegen einer neuen Synchronisation</string>
    <string name="dlg_add_sync_title_server">Servereinstellungen:</string>
    <string name="dlg_add_sync_edit_server_title">Serveraddresse</string>
    <string name="dlg_add_sync_edit_server_hint">smb://server.adresse/pfad</string>
    <string name="dlg_add_sync_edit_server_user_hint">Nutzername</string>
    <string name="dlg_add_sync_edit_server_pass_hint">Passwort</string>
    <string name="dlg_add_sync_title_client">Clientordner:</string>
    <string name="dlg_add_sync_text_client_hint">Kein Ordner ausgewählt.</string>
    <string name="dlg_add_sync_pos">Speichern</string>
    <string name="dlg_add_sync_neg">Abbrechen</string>
    <string name="dlg_choose_folder_title">Ordner auswählen</string>

    <string name="dlg_choose_share">Server auswählen</string>

</resources>
