<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dlg_add_sync_title_server"
        android:id="@+id/custom_dialog_nas_server_title"
        android:textStyle="bold"
        android:textSize="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_below="@id/custom_dialog_nas_server_title"
        android:id="@+id/custom_dialog_nas">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/custom_dialog_nas_server_address"
            android:hint="@string/dlg_add_sync_edit_server_hint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/custom_dialog_nas_server_address"
            android:hint="@string/dlg_add_sync_edit_server_user_hint"
            android:id="@+id/custom_dialog_nas_server_user" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:layout_below="@id/custom_dialog_nas_server_user"
            android:hint="@string/dlg_add_sync_edit_server_pass_hint"
            android:id="@+id/custom_dialog_nas_server_pass" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/custom_dialog_nas"
        android:text="@string/dlg_add_sync_title_client"
        android:textSize="20dp"
        android:textStyle="bold"
        android:id="@+id/custom_dialog_nas_client" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/custom_dialog_nas_client_folder"
        android:layout_below="@id/custom_dialog_nas_client"
        android:textSize="18dp"
        android:text="@string/dlg_add_sync_text_client_hint" />
</RelativeLayout>